--- a/darcria.html
+++ b/darcria.html
@@ -2,6 +2,8 @@
 <html lang="en" class="no-js">
 <head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Dar Cria - Vier Nev</title>
 		<meta name="description" content="Dar Cria is a VR experience, created by Vier Nev, that challenges the user's perception of the surrounding environment through the use of imagery with multiple meanings. ">
 		<meta name="author" content="Vier Nev">
