--- a/darcria.html
+++ b/darcria.html
@@ -25,6 +25,17 @@
 <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125820902-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125820902-1');
+</script>
+
 </head>
 	<body class="black_body">
 	
