--- a/darcria.html
+++ b/darcria.html
@@ -56,13 +56,11 @@
 	
 	<div id="menu_work"><a href="index.html#portfolio" class="dark">work</a></div>
 	
-	<svg height="2vw" width="20vw"  id="menu_line_work_container">
-  <line id="menu_line_work" class="dark" x1="0" y1="0" x2="20vw" y2="0" /></svg>
-	
+	<object data="img/icon/line_white_thin.svg" type="image/svg+xml" style="height:2vw; width:20vw;" id="menu_line_work_container"></object>
+    
 	<div id="menu_about"><a href="about.html" class="dark">about</a></div>
 	
-	<svg height="2vw" width="20vw"  id="menu_line_about_container">
-  <line id="menu_line_about" class="dark" x1="0" y1="0" x2="20vw" y2="0" /></svg>
+	<object data="img/icon/line_white_thin.svg" type="image/svg+xml" style="height:2vw; width:20vw;" id="menu_line_about_container"></object>
 		
 		
 	</div>
