--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 	
 	</div>
 	
+	<div id="loader"></div>
+	
 	<div id="light_circle"></div>
 	</div>
-	
 	
 	
 	<div id="work_container">
@@ -1110,6 +1111,14 @@
 
 <script>
 	$( document ).ready(function() {
+	
+		window.onload = function() {
+   $('#loader').fadeOut('slow');
+}
+   
+
+		
+		
 	/*ROTATE IMAGESS
 	*/
 	
