--- a/index.html
+++ b/index.html
@@ -1112,9 +1112,17 @@
 <script>
 	$( document ).ready(function() {
 	
+		
+		if ($(window).width() > 960) {
 		 $(window).on('load', function () {
    $('#loader').css({"opacity": "0","z-index" : "0"})
 });
+		}
+		
+		else {$('#loader').css({"opacity": "0","z-index" : "0"});
+			
+			
+		}
    
 
 		
