--- a/darcria.html
+++ b/darcria.html
@@ -157,7 +157,7 @@
 			
 		</div>
 		
-			<div id="darcria_description5" class="darcria_text">
+			<div id="darcria_description5" >
 				<svg height="2vw" width="100%">
   <line x1="0" y1="0" x2="40%" y2="0" style="stroke:white;stroke-width:3" />
 </svg>		
