--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 								<p>
 								Digital Artwork<br>
 								Diptych<br>
-								Inspired by <i>Dark Swan(2010)</i> </p></figcaption>
+								Inspired by <i>Black Swan(2010)</i> </p></figcaption>
 								 <div class="image_container">
 								<img src="img/large/Vier-Nev-ballet-diptych-Art-Illustration-Multistable-Perception-Optical-Illusion.png" alt="Vier-Nev-ballet-diptych-Art-Illustration-Multistable-Perception-Optical-Illusion"/>
 								</div></figure></li>
