--- a/about.html
+++ b/about.html
@@ -61,11 +61,11 @@
 <div id="menu">
 	
 	
- <a href="index.html#portfolio"> <div id="menu_work">work</div></a>
+ <div id="menu_work"><a href="index.html#portfolio"> work</a></div>
 	
  <object data="img/icon/line_black_thin.svg" type="image/svg+xml" style="height:2vw; width:20vw;" id="menu_line_work_container"></object>
 	
-	<a href="about.html"><div id="menu_about">about</div></a>
+	<div id="menu_about"><a href="about.html">about</a></div>
 	
 	<object data="img/icon/line_black_thin.svg" type="image/svg+xml" style="height:2vw; width:20vw;" id="menu_line_about_container"></object>
 		
