--- a/amindsang.html
+++ b/amindsang.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Dar Cria - Vier Nev</title>
+		<title>A Mind Sang | A Mãe de Sangue</title>
 		<meta name="description" content="Dar Cria is a VR experience, created by Vier Nev, that challenges the user's perception of the surrounding environment through the use of imagery with multiple meanings. ">
 		<meta name="author" content="Vier Nev">
 		<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
