--- a/amindsang.html
+++ b/amindsang.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="header8 cid-rAAfVyMjmu mbr-parallax-background" id="header8-r">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="header8 cid-rAAfVyMjmu mbr-parallax-background" id="header8-r">
 
     
 
