create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header6 cid-rAykctUVbm mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/_Bp_SLts9BY?rel=0&amp;showinfo=0&amp;autoplay=0&amp;loop=0" id="header6-j">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header6 cid-rAykctUVbm mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/_Bp_SLts9BY?rel=0&amp;showinfo=0&amp;autoplay=0&amp;loop=0" id="header6-j">
 
     
 
@@ -75,7 +75,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;">V I E R &nbsp; N E V</span></h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    Vier Nev is a portuguese multidisciplinary artist&nbsp;</p>
+                    Vier Nev is a Portuguese multidisciplinary artist&nbsp;</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="index.html#slider1-g">RECENT PROJECTS</a>
                         <a class="btn btn-md btn-white-outline display-4" href="index.html#gallery2-h">GALLERY</a></div>
             </div>
