--- a/amindsang.html
+++ b/amindsang.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header8 cid-rAAfVyMjmu mbr-parallax-background" id="header8-r">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header8 cid-rAAfVyMjmu mbr-parallax-background" id="header8-r">
 
     
 
