--- a/darcria.html
+++ b/darcria.html
@@ -25,6 +25,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125820902-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125820902-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-13">
 
     
@@ -62,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header8 cid-rAEub2UMug mbr-parallax-background" id="header8-1w">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="header8 cid-rAEub2UMug mbr-parallax-background" id="header8-1w">
 
     
 
