create github pages

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features11 cid-rCWMa8Vq51" id="features11-t">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="features11 cid-rCWMa8Vq51" id="features11-t">
 
     
 
@@ -105,7 +105,7 @@
 
                             <div class="card-box">
                                 <p class="block-text mbr-fonts-style display-7">
-                                   Vier studied Multimedia at Escola Superior de Artes e Design (ESMAD) and is currently studying for a Masters Degree in Virtual Reality at London College of Communication, University of the Arts London. &nbsp;They have acquired skills in AR and VR development, 2D animation, graphic design, UI/UX design, 3D modeling and animation, editing, post-production, SFX, motion graphics and art direction. <br>Vier's latest projects include a short film, an AR exhibition and a VR experience. 
+                                   Vier studied Multimedia at Escola Superior de Artes e Design (ESMAD) and Virtual Reality at London College of Communication, University of the Arts London. &nbsp;They have acquired skills in AR and VR development, 2D animation, graphic design, UI/UX design, 3D modeling and animation, editing, post-production, SFX, motion graphics and art direction. <br>Vier's latest projects include the award-winning short film "A Mind Sang", AR exhibition "A Terra é Tela" and the VR experiences "Dar Cria" and "Lucido". 
                                 </p>
                             </div>
                         </div>
