--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features11 cid-rCWMa8Vq51" id="features11-t">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="features11 cid-rCWMa8Vq51" id="features11-t">
 
     
 
