--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-black display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Projects<br></a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="aterraetela.html">A Terra é Tela<br></a><a class="dropdown-item text-black display-4" href="amindsang.html" aria-expanded="false">A Mind Sang</a><a class="dropdown-item text-black display-4" href="darcria.html" aria-expanded="false">Dar Cria</a></div>
+            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item dropdown open">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">Projects<br></a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="aterraetela.html">A Terra é Tela<br></a><a class="dropdown-item text-black display-4" href="amindsang.html" aria-expanded="false">A Mind Sang</a><a class="dropdown-item text-black display-4" href="darcria.html" aria-expanded="false">Dar Cria</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="about.html">
                         
                         About</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="about.html#info2-q">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header6 cid-rAykctUVbm mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=2GajzbdD3J8/watch?v=2GajzbdD3J8" id="header6-j">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="header6 cid-rAykctUVbm mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=2GajzbdD3J8/watch?v=2GajzbdD3J8" id="header6-j">
 
     
 
